--- a/vftvk-Simple-Interest-Calculator-master/index.html
+++ b/vftvk-Simple-Interest-Calculator-master/index.html
@@ -1,16 +1,51 @@
+<!DOCTYPE html>
+
 <html>
-    <head>
+  <head>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+    <title>Web App - Simple Interest Calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div class="maindiv">
+      <form action="#" onsubmit="compute()">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+        Amount
+        <input type="number" id="principal" />
+        <br />
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        No. of Years
+        <select id="years">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+        </select>
+        <br />
+
+        Interest Rate:
+        <input
+          type="range"
+          id="rate"
+          min="1"
+          max="20"
+          step="0.25"
+          value="10.25"
+          onchange="updateRate()"
+        />
+        <span id="rate_val"> 10.25% </span>
+        <br />
+        <input type="submit" />
+      </form>
+      <span id="result"> </span>
+      <footer>&#169; This Calculator belongs to Ramadan Omar</footer>
+    </div>
+  </body>
 </html>
